fixed the z-index problems

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   section,
   nav,
   footer {
-    @apply max-w-[1440px] mx-auto w-full;
+    @apply max-w-[1440px] mx-auto w-full z-20;
   }
 
   section {
